# shrinkify.app

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
create-shrink/: function.json
generate-qr-code/: function.json
generate-shrink-origin/: function.json
redirect/: function.json
scripts/: bundle.sh
src/: main.rs
validate-shrink-origin/: function.json
